poll.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll-deployment
  labels:
    app: poll
  namespace: default
spec:
  selector:
    matchLabels:
      app: poll
  replicas: 2
  template:
    metadata:
      labels:
        app: poll
    spec:
      restartPolicy: Always
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - poll
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: poll
        image: epitechcontent/t-dop-600-poll:k8s
        resources:
          limits:
            memory: "128Mi"
        ports:
          - name: poll
            containerPort: 80
