result.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-deployment
  labels:
    app: result
  namespace: default
spec:
  selector:
    matchLabels:
      app: result
  replicas: 2
  template:
    metadata:
      labels:
        app: result
    spec:
      restartPolicy: Always
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - result
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: result
        image: epitechcontent/t-dop-600-result:k8s
        resources:
          limits:
            memory: "128Mi"
        ports:
          - name: result
            containerPort: 80
