traefik.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: kube-public
  labels:
    app: traefik
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
  - protocol: TCP
    port: 30042
    targetPort: dashboard
    nodePort: 30042
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web
  namespace: kube-public
  labels:
    app: traefik
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
  - protocol: TCP
    port: 80
    targetPort: web
    nodePort: 30021
